# Flight-Computer-Firmware

./: .clang-format  .gitignore  .gitmodules  LICENSE  NOTICE  README.md  fin_calib.c  req_traceability_report.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  feature_request.md  verification.md
.github/workflows/: appa-runner.yml  build-stability.yml  canard-runner.yml  clang-format-check.yml  codeql.yml  driver-tests.yml  fcf-regression.yml  integration-runner.yml  prerelease-builder.yml  req-tracer.yml  test-runner.yml
app/: baro_pressure.py
app/blink/: Makefile  main.h
app/canard/: fin_calib.c  imu_calib.c  main.c  pid_control.c
app/flight/: README.md
app/rev2/: .gitignore  Makefile  apogee_detect.c  error_contract.c  flash_appa.c  flight.c  fsm_appa.c  main.c  main.h  prelaunch.c  sensor_calibrate.c  state_transition.c  telemetry.c  telemetry.h
app/rev3/: Makefile  STM32H733XG_FLASH.ld  hardware_validation.c  main.c  main.h
auto/: .mxproject  Makefile  flight-computer.ioc
auto/appa/: .mxproject  Makefile  flight-computer.ioc
auto/data-logger/: .mxproject  Makefile  flight-computer.ioc
auto/rev2/: .mxproject  Makefile  STM32H750VBTx_FLASH.ld  STM32H750XX_FLASH.ld  (+2 more)
init/: init.c
lib/: readme.md  sdr_pin_defines_A0002.h  sdr_pin_defines_A0002_rev1.h
reqs/: req_tracer.py
test/: .coderabbit.yaml  .gitignore  README.md  readme.md
test/utilities/: emulator_runner.py  env_check.sh  pyproject.toml  run_all.sh
test/utilities/sdr_emulator_utils/: __init__.py  emulator_runner.py  tester.py
(+371 files in other folders)
