[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdr_emulator_utils"
version = "1.0.0"
description = "SDR emulator integration test utilities"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["sdr_emulator_utils*"]